# WhatsApp-MCP-controller

./: .gitignore  LICENSE  README.md  config.env.example  main.py  main_avl.py  pyproject.toml
src/whatsapp_test/: __init__.py  __main__.py  avl_main.py  coordinator.py  models.py  permission_gate.py  whatsapp_adapter.py
src/whatsapp_test/avl/: __init__.py  analyzer.py  coordinator.py  models.py  toolkit.py
