[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-mcp-controller"
version = "0.1.0"
description = "Local macOS WhatsApp Desktop controller with direct and AVL modes"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
whatsapp-controller = "whatsapp_test.__main__:main"
whatsapp-controller-avl = "whatsapp_test.avl_main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
